<resources>
    <string name="app_name">Challenge_mobile_recomendacoes</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up_prompt">Don’t have an account? Sign up</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email...</string>
    <string name="reset_password">Reset password</string>
    <string name="send_link_by_email">Send Link by email</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="date_of_birth">Date of Birth (YYYY-MM-DD)</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="don_t_have_an_account_sign_up">dont have an account sign up</string>
    <string name="senha">senha\n</string>
    <string name="user">user\n</string>
    <string name="TextLogin">Login\n</string>
    <string name="enviar_link_por_email">enviar link por email</string>
    <string name="redefinir_senha">redefinir senha</string>
    <string name="cadastre_se">cadastre se</string>
    <string name="date_of_birth_yyyy_mm_dd">date of birth (yyyy/mm/dd)</string>
    <string name="sign_up">sign up</string>
    <string name="course_name">Course Name</string>
    <string name="add_course">Add Course</string>
    <string name="welcome_to_your_courses">Welcome to Your Courses</string>
    <string name="add_courses">Add Courses</string>
    <string name="profile">Profile</string>
    <string name="don_t_have_an_account_signup">don\'t have an account? signup</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="digite_seu_user">Digite seu user</string>
    <string name="redefinir_senhas">redefinir senha</string>
    <string name="entre_com_seu_nome_de_usu_rio">Entre com seu nome de usuário</string>
    <string name="enviar_link_de_redefinição_por_email">enviar link por email</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="recommendations">Recommendations</string>
    <string name="search_for_courses">Search for courses</string>
    <string name="search">Search</string>
    <string name="app_settings">App Settings</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="e_mail">Email</string>
    <string name="profession">Profession</string>
    <string name="save">Save</string>
    <string name="nome_completo">Full Name</string>
    <string name="user_profile">User Profile</string>
</resources>
