<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/redefinir_senhas"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="24dp"/>

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entre_com_seu_nome_de_usu_rio" />

    <Button
        android:id="@+id/recoverButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar_link_de_redefinição_por_email"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/purple_700"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp" />
</LinearLayout>
