<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_your_courses"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/buttonAddCourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_courses"
        android:layout_marginTop="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_courses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:padding="8dp"/>

    <Button
        android:id="@+id/buttonProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:layout_marginTop="10dp"/>

</LinearLayout>
